fix alignments

--- a/fork_spoon/home/static/home/sass/_categories.scss
+++ b/fork_spoon/home/static/home/sass/_categories.scss
@@ -1,5 +1,5 @@
 .categories {
-    margin: 130px 50px 0px 5%;
+    margin: 130px 50px 0px 4%;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
