--- a/fork_spoon/home/static/home/sass/_top5.scss
+++ b/fork_spoon/home/static/home/sass/_top5.scss
@@ -16,17 +16,28 @@
         border: 2px solid black;
     }
     div {
-        margin: 50px 5.5% 0 5.5%;
+        width: 70%;
+        margin: 50px 5.5% 0 4.3%;
 
         display: flex;
         justify-content: space-between;
+        flex-wrap: wrap;
         img {
-            width: 220px;
-            height: 300px;
+            width: 190px;
+            height: 240px;
+            padding: 10px;
+            margin: auto;
+
             object-fit: cover;
       
             filter: brightness(2);
-            margin: none;
         }
-    }  
+    }
+    .vertical-line{
+        border-left: 6px solid 6F6B6B;
+        height: 500px;
+        left: 50%;
+        margin-left: -3px;
+        top: 500px;
+    }
 }
